use common java arg